--- a/kinklist.css
+++ b/kinklist.css
@@ -212,7 +212,7 @@ td + td { border-left-style:none }
 @media (max-width: 597px) {
 	body { font-size:10px }
 
-	table { min-width:345px }
+	/* table { min-width:345px } */
 
 	.legend div {
 		width:150px;
